# CMakeExercises

./: README.md
case1/: CMakeLists.txt  README.md
case2/: CMakeLists.txt  README.md
case2/src/server/: server.cpp
case3/: CMakeLists.txt  README.md
case3/include/: lib.h  server.h
case3/lib/: lib.cpp
case3/src/client/: client.cpp
case3/src/server/: server.cpp
case4/: CMakeLists.txt  README.md  test.cpp
case4/ttest/: test_test.cpp
